test/terminal.txt
terminal output:

Compile:
	gcc -c main.c
	gcc -Wall $(xml2-config --cflags) $(xml2-config --libs) -c  xmlParse.c -lxml2
	gcc -c createdb.c -std=c99  `mysql_config --cflags --libs`
	gcc -o main main.o createdb.o -std=c99  `mysql_config --cflags --libs` xmlParse.o -lxml2
	./main
	
Mysql:
	mysql -u root -p
	password




pc@pc111:~/Desktop/project1/prj1/testing/database/test$ gcc -c main.c
pc@pc111:~/Desktop/project1/prj1/testing/database/test$ gcc -c xmlParse.c
xmlParse.c:8:10: fatal error: libxml/parser.h: No such file or directory
 #include <libxml/parser.h>
          ^~~~~~~~~~~~~~~~~
compilation terminated.
pc@pc111:~/Desktop/project1/prj1/testing/database/test$ gcc -c xmlParse.c -lxml2xmlParse.c:8:10: fatal error: libxml/parser.h: No such file or directory
 #include <libxml/parser.h>
          ^~~~~~~~~~~~~~~~~
compilation terminated.
pc@pc111:~/Desktop/project1/prj1/testing/database/test$ gcc -Wall $(xml2-config --cflags) $(xml2-config --libs) -o xmlParse xmlParse.c -lxml2
/usr/lib/gcc/x86_64-linux-gnu/7/../../../x86_64-linux-gnu/Scrt1.o: In function `_start':
(.text+0x20): undefined reference to `main'
collect2: error: ld returned 1 exit status
pc@pc111:~/Desktop/project1/prj1/testing/database/test$ gcc -Wall $(xml2-config --cflags) $(xml2-config --libs) -c  xmlParse.c -lxml2
pc@pc111:~/Desktop/project1/prj1/testing/database/test$ gcc -o main main.o xmlParse.o
xmlParse.o: In function `readXml':
xmlParse.c:(.text+0x44): undefined reference to `xmlReadFile'
xmlParse.c:(.text+0x5a): undefined reference to `xmlDocGetRootElement'
xmlParse.c:(.text+0x70): undefined reference to `xmlFirstElementChild'
xmlParse.c:(.text+0xdc): undefined reference to `xmlNodeGetContent'
xmlParse.c:(.text+0x11e): undefined reference to `xmlLastElementChild'
xmlParse.c:(.text+0x17c): undefined reference to `xmlNodeGetContent'
collect2: error: ld returned 1 exit status
pc@pc111:~/Desktop/project1/prj1/testing/database/test$ gcc -o main main.o xmlParse.o -lxml2
pc@pc111:~/Desktop/project1/prj1/testing/database/test$ ./main
enter the XML file name:
bmd.xml
I/O warning : failed to load external entity "NULL"
Segmentation fault (core dumped)
pc@pc111:~/Desktop/project1/prj1/testing/database/test$ 

